[tool.poetry]
name = "e-com(at)"
version = "0.1.0"
description = ""
authors = ["Andrei Tihomirov <moon200505@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.linter.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
flake8 = "^7.3.0"


[tool.poetry.group.develop.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    'venv',
    'tests',
    ]

[tool.black]
line-length = 119
exclude = '''
    (
    /(
        \.git
    )/
)
'''

[tool.isort]
line_length = 119